chore: starter instructions

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,29 +3,29 @@
 @tailwind utilities;
 
 :root {
-  /* #region  /**=========== Primary Color =========== */
-  /* !STARTERCONF Customize these variable, copy and paste from /styles/colors.css for list of colors */
-  --tw-color-primary-50: 240 249 255;
-  --tw-color-primary-100: 224 242 254;
-  --tw-color-primary-200: 186 230 253;
-  --tw-color-primary-300: 125 211 252;
-  --tw-color-primary-400: 56 189 248;
-  --tw-color-primary-500: 14 165 233;
-  --tw-color-primary-600: 2 132 199;
-  --tw-color-primary-700: 3 105 161;
-  --tw-color-primary-800: 7 89 133;
-  --tw-color-primary-900: 12 74 110;
-  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #f0f9ff */
-  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #e0f2fe */
-  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #bae6fd */
-  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #7dd3fc */
-  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #38bdf8 */
-  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #0ea5e9 */
-  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #0284c7 */
-  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #0369a1 */
-  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #075985 */
-  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #0c4a6e */
-  /* #endregion  /**======== Primary Color =========== */
+  /* Tailwind "cyan" colours */
+  --tw-color-primary-50: 236 254 255;
+  --tw-color-primary-100: 207 250 254;
+  --tw-color-primary-200: 165 243 252;
+  --tw-color-primary-300: 103 232 249;
+  --tw-color-primary-400: 34 211 238;
+  --tw-color-primary-500: 6 182 212;
+  --tw-color-primary-600: 8 145 178;
+  --tw-color-primary-700: 14 116 144;
+  --tw-color-primary-800: 21 94 117;
+  --tw-color-primary-900: 22 78 99;
+  --tw-color-primary-950: 8 51 68;
+  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #ecfeff */
+  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #cffafe */
+  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #a5f3fc */
+  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #67e8f9 */
+  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #22d3ee */
+  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #06b6d4 */
+  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #0891b2 */
+  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #0e7490 */
+  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #155e75 */
+  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #164e63 */
+  --color-primary-950: rgb(var(--tw-color-primary-950)); /* #083344 */
 }
 
 @layer base {
