--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,8 @@
   --color-primary-800: rgb(var(--tw-color-primary-800)); /* #155e75 */
   --color-primary-900: rgb(var(--tw-color-primary-900)); /* #164e63 */
   --color-primary-950: rgb(var(--tw-color-primary-950)); /* #083344 */
+  color: var(--color-primary-50);
+  background-color: var(--color-primary-950);
 }
 
 @layer base {
@@ -42,7 +44,9 @@
   }
 
   .cursor-newtab {
-    cursor: url('/images/new-tab.png') 10 10, pointer;
+    cursor:
+      url('/images/new-tab.png') 10 10,
+      pointer;
   }
 
   /* #region  /**=========== Typography =========== */
@@ -100,8 +104,12 @@
         var(--color-primary-400),
         var(--color-primary-500)
       );
-    background-size: 100% 2px, 0 2px;
-    background-position: 100% 100%, 0 100%;
+    background-size:
+      100% 2px,
+      0 2px;
+    background-position:
+      100% 100%,
+      0 100%;
     background-repeat: no-repeat;
   }
   @media (prefers-reduced-motion: no-preference) {
@@ -113,6 +121,8 @@
   }
   .animated-underline:hover,
   .animated-underline:focus-visible {
-    background-size: 0 2px, 100% 2px;
+    background-size:
+      0 2px,
+      100% 2px;
   }
 }
